--- a/components/homr/blog-slides/BlogSlides.module.css
+++ b/components/homr/blog-slides/BlogSlides.module.css
@@ -664,131 +664,24 @@
   padding-bottom: 128px;
 }
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  max-width: 100vw;
-  overflow-x: hidden;
-  font-family: "Montserrat", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  box-sizing: border-box;
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: 4rem auto;
+  width: 100%;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-  font-family: "Montserrat", sans-serif;
-  cursor: pointer;
+.container .title {
+  padding: 0 16px;
 }
 @media (min-width: 1008px) {
-  a:hover {
-    -webkit-text-decoration-line: underline;
-            text-decoration-line: underline;
+  .container .title {
+    padding: 0 128px;
   }
 }
 
-* {
-  box-sizing: border-box;
-}
-
-input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-p {
-  font-size: 0.85rem;
-  margin: 0px;
-  padding: 0px;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-
-h1 {
-  font-size: 2rem;
-  font-weight: 500;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-@media (min-width: 1008px) {
-  h1 {
-    font-size: 4rem;
-    line-height: 6rem;
-  }
-}
-
-h2 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 2.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-@media (min-width: 1008px) {
-  h2 {
-    font-size: 2.5rem;
-    line-height: 4.5rem;
-  }
-}
-
-h3 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-@media (min-width: 1008px) {
-  h3 {
-    font-size: 2rem;
-    line-height: 3.75rem;
-  }
-}
-
-h4 {
-  font-size: 2rem;
-  font-weight: 500;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-
-h5 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-
-h6 {
-  font-size: 1rem;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-
-input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  font-family: "Montserrat", sans-serif;
-}/*# sourceMappingURL=styles.css.map */
+.cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1%;
+}/*# sourceMappingURL=BlogSlides.module.css.map */
