--- a/components/homr/how-we-are-different/HowWeAreDifferent.module.css
+++ b/components/homr/how-we-are-different/HowWeAreDifferent.module.css
@@ -664,131 +664,57 @@
   padding-bottom: 128px;
 }
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  max-width: 100vw;
-  overflow-x: hidden;
-  font-family: "Montserrat", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  box-sizing: border-box;
+.container {
+  margin: 2rem 0;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-  font-family: "Montserrat", sans-serif;
-  cursor: pointer;
+.container .table {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-@media (min-width: 1008px) {
-  a:hover {
-    -webkit-text-decoration-line: underline;
-            text-decoration-line: underline;
+.container .table .row {
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  padding: 0.5rem 2rem;
+}
+@media (min-width: 640px) {
+  .container .table .row {
+    padding: 1.5rem 2rem;
   }
 }
-
-* {
-  box-sizing: border-box;
+.container .table .row .item {
+  flex: 1;
 }
-
-input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+.container .table .row .item h6 {
+  font-size: 0.9rem;
 }
-
-p {
-  font-size: 0.85rem;
-  margin: 0px;
-  padding: 0px;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-
-h1 {
-  font-size: 2rem;
-  font-weight: 500;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-@media (min-width: 1008px) {
-  h1 {
-    font-size: 4rem;
-    line-height: 6rem;
+@media (min-width: 640px) {
+  .container .table .row .item h6 {
+    font-size: 1.1rem;
   }
 }
-
-h2 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 2.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
+.container .table .row .item h6 span {
+  color: red;
 }
-@media (min-width: 1008px) {
-  h2 {
-    font-size: 2.5rem;
-    line-height: 4.5rem;
+.container .table .row .item p {
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+@media (min-width: 640px) {
+  .container .table .row .item p {
+    font-size: 0.95rem;
   }
 }
-
-h3 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
+.container .table .row .image {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: flex-start;
+  margin-left: 4rem;
 }
-@media (min-width: 1008px) {
-  h3 {
-    font-size: 2rem;
-    line-height: 3.75rem;
-  }
-}
-
-h4 {
-  font-size: 2rem;
-  font-weight: 500;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-
-h5 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-
-h6 {
-  font-size: 1rem;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  color: #424242;
-  font-family: "Montserrat", sans-serif;
-}
-
-input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  font-family: "Montserrat", sans-serif;
-}/*# sourceMappingURL=styles.css.map */
+.container .table .row .image img {
+  width: 28px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}/*# sourceMappingURL=HowWeAreDifferent.module.css.map */
