--- a/components/homr/section/HomeSection.module.scss
+++ b/components/homr/section/HomeSection.module.scss
@@ -4,10 +4,12 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-	max-width: 1080px;
 	margin: 0 auto;
 	padding: 16px;
 	width: 100%;
+	max-width: 1080px;
+	margin-bottom: 5rem;
+
 	.title {
 		display: flex;
 		align-items: center;
