--- a/components/util/buttons/explore/ExploreButton.module.scss
+++ b/components/util/buttons/explore/ExploreButton.module.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles/imports';
 
-.button {
+@mixin button($p: 1rem, $img: 1.5rem) {
 	display: flex;
 	align-items: center;
 	align-self: center;
@@ -15,7 +15,7 @@
 	}
 
 	p {
-		font-size: 1rem;
+		font-size: $p;
 		font-weight: 600;
 		text-transform: capitalize;
 		color: $color-primary;
@@ -29,7 +29,15 @@
 	}
 
 	img {
-		width: 24px;
+		width: $img;
 		object-fit: contain;
 	}
+}
+
+.bigButton {
+	@include button();
+}
+
+.smallButton {
+	@include button(14px, 22px);
 }
