--- a/components/homr/banner/Styles.module.css
+++ b/components/homr/banner/Styles.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap");
 .fluid {
   padding-right: 16px;
   padding-left: 16px;
@@ -666,9 +667,96 @@
 
 .container {
   width: 100vw;
-  background-image: url("../../../public/test/banner.jpg");
+  background-image: url("../../../public/test/hero.jpeg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.container .main {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 16px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 0 32px;
+  height: 100%;
+  justify-content: center;
+}
+@media (min-width: 640px) {
+  .container .main {
+    padding: 0 128px;
+  }
+}
+.container .main .left {
+  margin-top: 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  flex: 1;
+}
+.container .main .left img {
+  width: 240px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.container .main .left h1 {
+  font-family: "Caveat", sans-serif;
+  text-align: center;
+  color: whitesmoke;
+  line-height: 0.75;
+  letter-spacing: 7%;
+  font-size: 48px;
+  text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.4);
+}
+.container .main .left h1 span {
+  font-size: 72px;
+}
+.container .main .left .button {
+  width: 248px;
+  height: 52px;
+  background-color: whitesmoke;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  border-radius: 30px;
+  cursor: pointer;
+}
+.container .main .left .button p {
+  font-family: "Caveat", sans-serif;
+  font-weight: 700;
+  font-size: 1.4rem;
+}
+@media (min-width: 1008px) {
+  .container .main .left .button:hover {
+    background-color: black;
+  }
+  .container .main .left .button:hover p {
+    color: whitesmoke;
+  }
+}
+.container .main .bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+.container .main .bottom p {
+  font-family: "Caveat", sans-serif;
+  color: whitesmoke;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.slider {
+  height: 50vh;
+}
+.slider img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 50vh;
 }/*# sourceMappingURL=Styles.module.css.map */
