--- a/components/homr/banner/Styles.module.scss
+++ b/components/homr/banner/Styles.module.scss
@@ -1,10 +1,98 @@
 @import '../../../styles/imports';
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
 
 .container {
 	width: 100vw;
-	background-image: url('../../../public/test/banner.jpg');
+	background-image: url('../../../public/test/hero.jpeg');
 	height: 100vh;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	.main {
+		display: flex;
+		flex-direction: column;
+		margin: 0 auto;
+		padding: 16px;
+		width: 100%;
+		//max-width: 1080px;
+		background-color: rgba(black, 0.3);
+		padding: 0 32px;
+
+		@include tab {
+			padding: 0 128px;
+		}
+		height: 100%;
+		justify-content: center;
+		.left {
+			margin-top: 8rem;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			gap: 3rem;
+			flex: 1;
+			img {
+				width: 240px;
+				object-fit: contain;
+			}
+			h1 {
+				font-family: 'Caveat', sans-serif;
+				text-align: center;
+				color: whitesmoke;
+				line-height: 0.75;
+				letter-spacing: 7%;
+				font-size: 48px;
+				text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.4);
+				span {
+					font-size: 72px;
+				}
+			}
+			.button {
+				width: 248px;
+				height: 52px;
+				background-color: whitesmoke;
+				align-items: center;
+				justify-content: center;
+				display: flex;
+
+				border-radius: 30px;
+				cursor: pointer;
+				p {
+					font-family: 'Caveat', sans-serif;
+					font-weight: 700;
+					font-size: 1.4rem;
+				}
+				@include hover {
+					background-color: black;
+					p {
+						color: whitesmoke;
+					}
+				}
+			}
+		}
+		.bottom {
+			display: flex;
+
+			align-items: center;
+			justify-content: center;
+			margin-bottom: 1rem;
+
+			p {
+				font-family: 'Caveat', sans-serif;
+				color: whitesmoke;
+				font-weight: 600;
+				font-size: 1rem;
+			}
+		}
+	}
+}
+
+.slider {
+	height: 50vh;
+
+	img {
+		width: 100%;
+		object-fit: cover;
+		height: 50vh;
+	}
 }
