--- a/components/homr/how-we-are-different/HowWeAreDifferent.module.scss
+++ b/components/homr/how-we-are-different/HowWeAreDifferent.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/imports';
 
 .container {
-	margin: 2rem 0;
+	padding: 2rem 0;
 	.table {
 		display: flex;
 		flex-direction: column;
