--- a/components/homr/section/HomeSection.module.scss
+++ b/components/homr/section/HomeSection.module.scss
@@ -3,12 +3,13 @@
 .container {
 	display: flex;
 	flex-direction: column;
-	min-height: 100vh;
+	@include tab {
+		min-height: 100vh;
+	}
 	margin: 0 auto;
 	padding: 16px;
 	width: 100%;
 	max-width: 1080px;
-	margin-bottom: 5rem;
 
 	.title {
 		display: flex;
@@ -32,6 +33,6 @@
 	}
 
 	@include desktop {
-		padding: 32px 16px;
+		padding: 64px 16px;
 	}
 }
