--- a/components/util/buttons/explore/ExploreButton.module.scss
+++ b/components/util/buttons/explore/ExploreButton.module.scss
@@ -19,6 +19,8 @@
 		font-weight: 600;
 		text-transform: capitalize;
 		color: $color-primary;
+		margin: 0;
+		padding: 0;
 
 		.redSpan {
 			color: $color-primary;
