--- a/components/cards/products-card/ProductsCard.module.scss
+++ b/components/cards/products-card/ProductsCard.module.scss
@@ -38,6 +38,8 @@ $box-shadow: 0px 4px 10px rgba(138, 123, 123, 0.15);
 		p {
 			font-weight: 700;
 			margin-bottom: 0.75rem;
+			margin: 0;
+			padding: 0;
 		}
 		h6 {
 			font-size: 1.2rem;
@@ -47,6 +49,8 @@ $box-shadow: 0px 4px 10px rgba(138, 123, 123, 0.15);
 
 			p {
 				text-decoration-line: underline;
+				margin: 0;
+				padding: 0;
 			}
 		}
 	}
@@ -65,6 +69,8 @@ $box-shadow: 0px 4px 10px rgba(138, 123, 123, 0.15);
 				color: inherit;
 				font-size: 0.6rem;
 				font-weight: 700;
+				margin: 0;
+				padding: 0;
 				@include tab {
 					font-size: 0.7rem;
 				}
@@ -87,6 +93,8 @@ $box-shadow: 0px 4px 10px rgba(138, 123, 123, 0.15);
 				p {
 					font-size: 1.4rem;
 					font-weight: 400;
+					margin: 0;
+					padding: 0;
 				}
 			}
 		}
@@ -96,6 +104,8 @@ $box-shadow: 0px 4px 10px rgba(138, 123, 123, 0.15);
 			border-bottom-right-radius: 2px;
 			p {
 				text-transform: uppercase;
+				margin: 0;
+				padding: 0;
 			}
 		}
 	}
