--- a/admin-components/sidebar/SIdebar.module.scss
+++ b/admin-components/sidebar/SIdebar.module.scss
@@ -88,6 +88,8 @@
 			font-size: 0.7rem;
 			font-weight: 700;
 			letter-spacing: 1px;
+			margin: 0;
+			padding: 0;
 			//text-transform: uppercase;
 		}
 	}
