--- a/components/util/buttons/shop-now/ShopNowButton.module.css
+++ b/components/util/buttons/shop-now/ShopNowButton.module.css
@@ -690,6 +690,8 @@
   font-weight: 600;
   text-transform: capitalize;
   color: red;
+  margin: 0;
+  padding: 0;
 }
 .button p .redSpan {
   color: red;
