--- a/components/homr/newsletter/Newsletter.module.css
+++ b/components/homr/newsletter/Newsletter.module.css
@@ -733,4 +733,6 @@
   color: whitesmoke;
   font-size: 1rem;
   font-weight: 600;
+  margin: 0;
+  padding: 0;
 }/*# sourceMappingURL=Newsletter.module.css.map */
