--- a/components/profile/profile-card/ProfileCard.module.scss
+++ b/components/profile/profile-card/ProfileCard.module.scss
@@ -52,6 +52,8 @@
 				text-transform: capitalize;
 				font-weight: 500;
 				white-space: nowrap;
+				margin: 0;
+				padding: 0;
 			}
 		}
 		.placeholderOption {
