--- a/styles/styles.css
+++ b/styles/styles.css
@@ -710,8 +710,8 @@ input {
 
 p {
   font-size: 0.85rem;
-  margin: 0px;
-  padding: 0px;
+  margin: 0px !important;
+  padding: 0px !important;
   line-height: 1.5;
   color: #424242;
   font-family: "Montserrat", sans-serif;
