--- a/styles/styles.css
+++ b/styles/styles.css
@@ -734,18 +734,18 @@ h1 {
 }
 
 h2 {
-  font-size: 1.5rem;
-  font-weight: 700;
+  font-size: 1.5rem !important;
+  font-weight: 700 !important;
   margin: 0;
   padding: 0;
-  line-height: 2.5;
+  line-height: 2.5 !important;
   color: #424242;
   font-family: "Montserrat", sans-serif;
 }
 @media (min-width: 1008px) {
   h2 {
-    font-size: 2.5rem;
-    line-height: 4.5rem;
+    font-size: 2.5rem !important;
+    line-height: 4.5rem !important;
   }
 }
 
