--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -70,17 +70,17 @@ h1 {
 }
 
 h2 {
-	font-size: 1.5rem;
-	font-weight: 700;
+	font-size: 1.5rem !important;
+	font-weight: 700 !important;
 	margin: 0;
 	padding: 0;
-	line-height: 2.5;
+	line-height: 2.5 !important;
 	color: $color-text;
 	font-family: $font-family;
 
 	@include desktop {
-		font-size: 2.5rem;
-		line-height: 4.5rem;
+		font-size: 2.5rem !important;
+		line-height: 4.5rem !important;
 	}
 }
 
