--- a/styles/styles.css
+++ b/styles/styles.css
@@ -777,7 +777,7 @@ h4 {
 
 h5 {
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 700 !important;
   margin: 0;
   padding: 0;
   line-height: 1.5;
@@ -787,7 +787,7 @@ h5 {
 
 h6 {
   font-size: 1rem;
-  font-weight: 700;
+  font-weight: 700 !important;
   margin: 0;
   padding: 0;
   line-height: 1.5;
