--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -111,7 +111,7 @@ h4 {
 
 h5 {
 	font-size: 1.5rem;
-	font-weight: 700;
+	font-weight: 700 !important;
 	margin: 0;
 	padding: 0;
 	line-height: 1.5;
@@ -121,7 +121,7 @@ h5 {
 
 h6 {
 	font-size: 1rem;
-	font-weight: 700;
+	font-weight: 700 !important;
 	margin: 0;
 	padding: 0;
 	line-height: 1.5;
