--- a/components/nav/header/Header.module.scss
+++ b/components/nav/header/Header.module.scss
@@ -1,5 +1,7 @@
 @import '../../../styles/imports';
 
+$border: 1px solid rgba(white, 0.2);
+
 .container {
 	display: flex;
 	//height: 4rem;
@@ -11,8 +13,10 @@
 	width: 100%;
 	z-index: 10;
 	justify-content: space-between;
+	padding: 0 1rem;
 	@include tab {
 		//padding: 0 64px;
+		padding: 0;
 	}
 	.left {
 		display: flex;
@@ -33,8 +37,8 @@
 
 .squareItem {
 	height: 4rem;
-	width: 4rem;
-	border: 1px solid rgba(white, 0.4);
+	width: 2.5em;
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -44,11 +48,17 @@
 		width: 1.25rem;
 		object-fit: contain;
 	}
+
+	@include tab {
+		height: 4rem;
+		width: 4rem;
+		border: $border;
+	}
 }
 
 .squareText {
-	min-width: 4rem;
-	border: 1px solid rgba(white, 0.4);
+	min-width: 2rem;
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -62,11 +72,18 @@
 		color: inherit;
 		font-size: 1rem;
 	}
+	@include tab {
+		border: $border;
+		min-width: 4rem;
+	}
 }
 
 .location {
 	min-width: 4rem;
-	border: 1px solid rgba(white, 0.4);
+	@include tab {
+		border: $border;
+		height: 4rem;
+	}
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -96,11 +113,16 @@
 
 .logo {
 	height: 4rem;
-	border: 1px solid rgba(white, 0.4);
+	padding: 0 0.25rem;
+	@include tab {
+		border: $border;
+		padding: 0 1rem;
+	}
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 0 1rem;
+
 	cursor: pointer;
 	img {
 		height: auto;
